# Automatic-Solar-Lighting-System

./: IMG_7579.heic  README.md  sdkconfig  sdkconfig.old
App/: local.properties
Documentation/: Final Report.docx  Integration Checklist.docx  Schedule Validation Document.docx  Senior Design component links.docx  Team finances.xlsx
MCU_CODE/: README.md  readme.m  sdkconfig
MCU_CODE/MCU_Code/: partition.csv  readme.txt  sdkconfig
MCU_CODE/main/: CMakeLists.txt  firebase.c  firebase.h  rs485_example.c
MCU_Code/: CMakeLists.txt  sdkconfig
MCU_Code/main/: CMakeLists.txt  code_explained  firebase.h  main.txt  readme.md  rs485_communication.c  rs485_example.c
PCB Files/Inverter & Buckk/: Power Distribution Overview
PCB Files/MCU/: mcu_files.txt
PCB Files/MCU & Sensors/: MCU_redesign.GBL  MCU_redesign.GBO  MCU_redesign.GP1  MCU_redesign.GTL  MCU_redesign.GTP  MCU_redesign.GTS  MCU_redesign.TXT  MCU_redesign.apr  Status Report.Txt
PCB Files/Nicholas Miller - Power Distribution/: BuckConverter_Simulation.asc  Power Distribution Overview
PowerGeneration/MCUcodeINA/: ina260.c  ina260.h
PowerGeneration/photos/: IMG_8940.HEIC  IMG_8941.HEIC  IMG_8942.HEIC  IMG_8943.HEIC  IMG_8944.HEIC  IMG_8945.HEIC  IMG_9337.HEIC  IMG_9338.HEIC  IMG_9339.HEIC  IMG_9340.HEIC  IMG_9341.HEIC  IMG_9342.HEIC  IMG_9343.HEIC  IMG_9344.HEIC  IMG_9461.heic
PowerGeneration/update video/: IMG_9127.HEIC  IMG_9128.HEIC  IMG_9134.HEIC  IMG_9135.HEIC
Sensor_Code/: readme.m
Sensor_Code/Exterior_sensor/: config.h  (+1 more)
main/: CMakeLists.txt  ina260.h  rs485_communication.c  rs485_example.c
(+134 files in other folders)
